After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708255 - VPN ConnectInteractive -> Connect fallback doesn't actually work
VPN ConnectInteractive -> Connect fallback doesn't actually work
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: VPN (general)
0.9.8
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-17 17:19 UTC by Dan Winship
Modified: 2013-09-27 12:34 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Winship 2013-09-17 17:19:19 UTC
the ConnectInteractive -> Connect fallback code doesn't work, because _connect_internal() changes the state to NM_VPN_SERVICE_STATE_STARTING before checking if it can implement ConnectInteractive, and then when the Connect call comes in, the VPN is not in STOPPED or INIT, so it returns an error.
Comment 1 Jiri Klimes 2013-09-26 13:41:22 UTC
The fix is available in jklimes/bgo708255-vpn-fix branch. Please review it.
Comment 2 Thomas Haller 2013-09-26 15:13:32 UTC
Looks good to me.


If anything, I would:

- squash "vpn: use constants instead of literal value for VPN plugin errors"
- remove trailing space in "vpn: fix connecting to VPN (bgo #708255)" (nm-vpn-connection.c)
Comment 3 Dan Williams 2013-09-26 15:21:39 UTC
I would also combine "vpn: return INTERACTIVE_NOT_SUPPORTED for NewSecrets() when not implemented" and "vpn: fix connecting to VPN (bgo #708255)" I think.  Other than that, looks good.
Comment 4 Jiri Klimes 2013-09-27 12:34:07 UTC
Commits updated accordingly and pushed:
9dff830692c8ff0fe69291e4bc882e4060d77542
282b9df60d8dcfaea14e927721ff99968bc22721